Do not show "DOWNLOAD PAGE LATER" button if RELOAD button is shown

BUG=672593

Review-Url: https://codereview.chromium.org/2560823005
Cr-Commit-Position: refs/heads/master@{#437743}

Former-commit-id: 97430eb75aa5d976e9c02c2cf5ca4caf7d13513d